Bug fix for restoring uncompressed encrypted backups created with split_vss=1. Tweaks to the testing scripts.

--- a/src/win32/Makefile.inc.in
+++ b/src/win32/Makefile.inc.in
@@ -26,7 +26,7 @@ BUILDDIR := @BUILDDIR@
 TOPDIR := @TOPDIR@
 #
 # where we find depkgs
-DEPKGS := $(TOPDIR)/@DEPKGS@
+DEPKGS := $(BUILDDIR)/../../@DEPKGS@
 
 DOCDIR := $(TOPDIR)/docs
 
