Bug fix for the forkchild child not exiting when execv fails. Changed the run_script() code to take an array. Added server_script_pre_notify and server_script_post_notify options.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -119,10 +119,17 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 #server_script_pre_arg = /etc/burp/crl
 #server_script_pre_arg = /etc/burp/burp-server.conf
 #server_script_pre_arg = /etc/burp/server-pre-script.local
+# Set server_script_pre_notify to 1 to have notifications on server_script_pre
+# returning non-zero. Most people will want to leave this off - it could
+# result in a lot of emails because clients normally connect once every 20
+# minutes. Requires notify_failure_script to be set above.
+#server_script_pre_notify = 0
 #server_script_post = 
 #server_script_post_arg = 
 #server_script_post_arg = 
 #server_script_post_run_on_fail=0
+# As for server_script_pre_notify, but for post.
+#server_script_post_notify = 0
 
 # Clients that are able to list and restore files belonging to any other
 # client. If this is too permissive, you may set a restore_client for
