--- a/website/content/main.template
+++ b/website/content/main.template
@@ -54,7 +54,7 @@ BURP - BackUp and Restore Program
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="XC8N3XB7T6UFQ">
-<input type="image" src="http://burp.grke.net/images/paypal.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online.">
+<input type="image" src="http://burp.grke.org/images/paypal.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online.">
 <img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1">
 </form>
 </td>
