--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -75,14 +75,13 @@ include = /home
 #exclude = /home/graham/testdir/librsync-0.9.7/testsuite
 #include = /home/graham/testdir/librsync-0.9.7/testsuite/deep
 #include = /home/graham/xdir
-# Include path that match a regular expression
-#include_regex = /\.cache/
 #exclude = /home/graham/testdir/libr
 # Exclude file names ending in '.vdi' or '.vmdk' (case insensitive)
 #exclude_ext = vdi
 #exclude_ext = vmd
 # Exlude file path matching a regular expression
-#exclude_re = \.cache
+# (note that 'include_regex' is not yet implemented)
+#exclude_regex = \.cache
 # Exclude various temporary file systems. You may want to add devfs, devpts,
 # proc, ramfs, etc.
 exclude_fs = sysfs
