--- a/website/content/main.template
+++ b/website/content/main.template
@@ -35,6 +35,7 @@ BURP - BackUp and Restore Program
 @why@why@why
 @faq@faq@faq
 @howto@howto@howto
+@wiki@wiki@wiki
 @download@download@download
 @contact@contact@contact
 </TR>
