Better description of 'keep' in example config.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -39,8 +39,8 @@ version_warn = 1
 # autoupgrade_dir = /etc/burp/autoupgrade/server
 
 # You can have as many 'keep' lines as you like.
-# Setting 7, 4, 6 will keep 7 daily backups, 4 weekly, and 6 four-weekly
-# backups.
+# For example, if running backups daily, setting 7, 4, 6 will keep
+# 7 daily backups, 4 weekly, and 6 four-weekly backups.
 keep = 7
 # keep = 4
 # keep = 6
