--- a/src/win32/burp/Makefile
+++ b/src/win32/burp/Makefile
@@ -42,6 +42,7 @@ FILED_OBJS = \
 	$(OBJDIR)/client_vss.o \
 	$(OBJDIR)/conf.o \
 	$(OBJDIR)/counter.o \
+	$(OBJDIR)/delete_client.o \
 	$(OBJDIR)/extrameta.o \
 	$(OBJDIR)/find.o \
 	$(OBJDIR)/forkchild.o \
