--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -14,6 +14,7 @@ umask = 0022
 syslog = 1
 stdout = 0
 # The following options can restrict what the client can do.
+client_can_delete = 1
 # Set client_can_force_backup to 0 to only allow timed backups.
 client_can_force_backup = 1
 client_can_list = 1
