fixed configure and build error due to missing lockf on android
still need to disable xattr support during configure, and build fails
to generate executables

--- a/autoconf/config.h.in
+++ b/autoconf/config.h.in
@@ -549,6 +549,9 @@
 /* Define to 1 if you have the `localtime_r' function. */
 #undef HAVE_LOCALTIME_R
 
+/* Define to 1 if you have the `lockf' function. */
+#undef HAVE_LOCKF
+
 /* Define to 1 if the system has the type `long long int'. */
 #undef HAVE_LONG_LONG_INT
 
