Preparation for new engine.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -26,12 +26,8 @@ SVRSRCS =	acl.c \
 		auth_client.c \
 		autoupgrade_client.c \
 		autoupgrade_server.c \
-		backup_phase1_client.c \
-		backup_phase2_client.c \
-		backup_phase1_server.c \
-		backup_phase2_server.c \
-		backup_phase3_server.c \
-		backup_phase4_server.c \
+		backup_client.c \
+		backup_server.c \
 		base64.c \
 		berrno.c \
 		bfile.c \
@@ -61,7 +57,6 @@ SVRSRCS =	acl.c \
 		regexp.c \
 		restore_client.c \
 		restore_server.c \
-		rs_buf.c \
 		sbuf.c \
 		server.c \
 		ssl.c \
@@ -93,7 +88,7 @@ WIN32LIBS = $(@WIN32@)
 #	@echo "Compiling $<"
 	$(ECHO_CMD)$(CXX) $(DEFS) $(DEBUG) -c $(WCFLAGS) $(CPPFLAGS) -I$(srcdir) -I$(basedir) $(DINCLUDE) $(CFLAGS) $<
 #-------------------------------------------------------------------------
-all: Makefile @WIN32@ burp @STATIC@ bedup @STATIC_DEDUP@ vss_strip @STATIC_STRIP_VSS@
+all: Makefile @WIN32@ burp @STATIC@
 	@echo "==== Make of burp is good ===="
 	@echo " "
 
@@ -126,30 +121,12 @@ burp:  Makefile $(SVROBJS) @WIN32@
 	@echo "Linking $@ ..."
 	$(LIBTOOL_LINK) $(CXX) $(WLDFLAGS) $(LDFLAGS) -o $@ $(SVROBJS) \
 	  $(WIN32LIBS) $(FDLIBS) -lm $(LIBS) \
-	  $(DLIB) $(WRAPLIBS) $(GETTEXT_LIBS) $(OPENSSL_LIBS) $(RSYNC_LIBS) $(ZLIBS) $(NCURSES_LIBS) $(CRYPT_LIBS)
+	  $(DLIB) $(WRAPLIBS) $(GETTEXT_LIBS) $(OPENSSL_LIBS) $(ZLIBS) $(NCURSES_LIBS) $(CRYPT_LIBS)
 
 static-burp: Makefile $(SVROBJS) @WIN32@
 	$(LIBTOOL_LINK) $(CXX) $(WLDFLAGS) $(LDFLAGS) -static -o $@ $(SVROBJS) \
 	   $(WIN32LIBS) $(FDLIBS) -lm $(LIBS) \
-	   $(DLIB) $(WRAPLIBS) $(GETTEXT_LIBS) $(OPENSSL_LIBS) $(RSYNC_LIBS) $(ZLIBS) $(NCURSES_LIBS) $(CRYPT_LIBS)
-
-bedup:  Makefile bedup.o @WIN32@
-	@echo "Linking $@ ..."
-	$(LIBTOOL_LINK) $(CXX) $(WLDFLAGS) $(LDFLAGS) -o $@ bedup.o conf.o lock.o log.o prepend.o regexp.o strlist.o \
-	  $(WIN32LIBS) $(FDLIBS) -lm $(LIBS) \
-	  $(DLIB) $(WRAPLIBS) $(GETTEXT_LIBS) $(OPENSSL_LIBS) $(RSYNC_LIBS) $(ZLIBS) $(NCURSES_LIBS) $(CRYPT_LIBS)
-
-static-bedup: Makefile bedup.o @WIN32@
-	$(LIBTOOL_LINK) $(CXX) $(WLDFLAGS) $(LDFLAGS) -static -o $@ bedup.o conf.o lock.o log.o prepend.o regexp.o strlist.o \
-	   $(WIN32LIBS) $(FDLIBS) -lm $(LIBS) \
-	   $(DLIB) $(WRAPLIBS) $(GETTEXT_LIBS) $(OPENSSL_LIBS) $(RSYNC_LIBS) $(ZLIBS) $(NCURSES_LIBS) $(CRYPT_LIBS)
-
-vss_strip:  Makefile vss_strip.o
-	@echo "Linking $@ ..."
-	$(LIBTOOL_LINK) $(CXX) $(WLDFLAGS) $(LDFLAGS) -o $@ vss_strip.o
-
-static-vss_strip: Makefile vss_strip.o
-	$(LIBTOOL_LINK) $(CXX) $(WLDFLAGS) $(LDFLAGS) -static -o $@ vss_strip.o
+	   $(DLIB) $(WRAPLIBS) $(GETTEXT_LIBS) $(OPENSSL_LIBS) $(ZLIBS) $(NCURSES_LIBS) $(CRYPT_LIBS)
 
 Makefile: $(srcdir)/Makefile.in $(topdir)/config.status
 	cd $(topdir) \
@@ -160,8 +137,7 @@ libtool-clean:
 
 clean:	libtool-clean
 	@$(RMF) burp core core.* a.out *.o *.bak *~ *.intpro *.extpro 1 2 3
-	@$(RMF) bedup static-burp static-bedup config.h
-	@$(RMF) vss_strip static-vss_strip
+	@$(RMF) static-burp config.h
 	@$(RMF) Makefile
 	@$(RMF) uthash.h
 #	@if test -f win32/Makefile -a "${GMAKE}" != "none"; then \
@@ -187,26 +163,14 @@ devclean: realclean
 
 install: all
 	rm -f $(DESTDIR)/sbin/burp ; \
-	rm -f $(DESTDIR)/sbin/bedup ; \
 	rm -f $(DESTDIR)/usr/sbin/burp ; \
-	rm -f $(DESTDIR)/usr/sbin/bedup ; \
 	$(LIBTOOL_INSTALL) $(INSTALL_PROGRAM) burp $(DESTDIR)$(sbindir)/burp 
-	$(LIBTOOL_INSTALL) $(INSTALL_PROGRAM) bedup $(DESTDIR)$(sbindir)/bedup
-	$(LIBTOOL_INSTALL) $(INSTALL_PROGRAM) vss_strip $(DESTDIR)$(sbindir)/vss_strip
 	@if test -f static-burp; then \
 	   $(LIBTOOL_INSTALL) $(INSTALL_PROGRAM) static-burp $(DESTDIR)$(sbindir)/static-burp; \
 	fi
-	@if test -f static-bedup ; then \
-	   $(LIBTOOL_INSTALL) $(INSTALL_PROGRAM) static-bedup  $(DESTDIR)$(sbindir)/static-bedup ; \
-	fi
-	@if test -f static-vss_strip ; then \
-	   $(LIBTOOL_INSTALL) $(INSTALL_PROGRAM) static-vss_strip  $(DESTDIR)$(sbindir)/static-vss_strip ; \
-	fi
-
-
 
 uninstall:
-	(cd $(DESTDIR)$(sbindir); $(RMF) burp bedup vss_strip static-burp static-bedup static-vss_strip)
+	(cd $(DESTDIR)$(sbindir); $(RMF) burp static-burp)
 
 
 
