--- a/src/win32/Makefile.inc.in
+++ b/src/win32/Makefile.inc.in
@@ -66,7 +66,7 @@ endif
 
 OBJDIRS := obj32 obj64
 
-LDFLAGS := -g -Wall -mno-cygwin -Wl,--disable-auto-import
+LDFLAGS := -g -Wall -Wl,--disable-auto-import
 
 INCLUDE_DDK := -I$(MINGW_INCLUDE)/ddk
 INCLUDE_BURP := -I$(MAINDIR)/src -I$(BUILDDIR)/compat
