Make compiling work for Windows.

--- a/src/win32/burp/Makefile
+++ b/src/win32/burp/Makefile
@@ -58,6 +58,7 @@ FILED_OBJS = \
 	$(OBJDIR)/prog.o \
 	$(OBJDIR)/rabin.o \
 	$(OBJDIR)/rabin_win.o \
+	$(OBJDIR)/rconf.o \
 	$(OBJDIR)/regexp.o \
 	$(OBJDIR)/restore_client.o \
 	$(OBJDIR)/sbuf.o \
