Factor out the code that generates server directory paths. Rework dedup_group and the directory paths so that clients can dedup on shared blocks. Still need to lock the data files before writing to them.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -4,6 +4,7 @@ mode = server
 port = 4971
 status_port = 4972
 directory = /var/spool/burp
+dedup_group = global
 clientconfdir = /etc/burp/clientconfdir
 pidfile = /var/run/burp.server.pid
 hardlinked_archive = 0
