--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -29,6 +29,7 @@ SRCS = \
 		conf.c \
 		counter.c \
 		forkchild.c \
+		glob_windows.c \
 		handy.c \
 		incexc_recv.c \
 		incexc_send.c \
@@ -44,7 +45,12 @@ SRCS = \
 		strlist.c \
 
 OBJS = $(SRCS:.c=.o)
-SUBDIROBJS = server/server.a client/client.a rabin/rabin.a legacy/legacy.a
+SUBDIROBJS = server/server.a \
+		client/client.a \
+		rabin/rabin.a \
+		legacy/client/client_legacy.a \
+		legacy/server/server_legacy.a \
+		legacy/legacy.a
 
 # these are the objects that are changed by the .configure process
 EXTRAOBJS = @OBJLIST@
