--- a/src/win32/burp/Makefile
+++ b/src/win32/burp/Makefile
@@ -55,10 +55,10 @@ CLIENT_OBJS = \
 	$(OBJDIR)/iobuf.o \
 	$(OBJDIR)/legacy/attribs.o \
 	$(OBJDIR)/legacy/client/acl.o \
-	$(OBJDIR)/legacy/client/backup_phase1_client.o \
-	$(OBJDIR)/legacy/client/backup_phase2_client.o \
+	$(OBJDIR)/legacy/client/backup_phase1.o \
+	$(OBJDIR)/legacy/client/backup_phase2.o \
 	$(OBJDIR)/legacy/client/find.o \
-	$(OBJDIR)/legacy/client/restore_client.o \
+	$(OBJDIR)/legacy/client/restore.o \
 	$(OBJDIR)/legacy/client/xattr.o \
 	$(OBJDIR)/legacy/handy.o \
 	$(OBJDIR)/legacy/msg.o \
