--- a/autoconf/Make.common.in
+++ b/autoconf/Make.common.in
@@ -91,6 +91,7 @@ DB_LIBS = @DB_LIBS@
 PYTHON_LIBS = @PYTHON_LIBS@
 PYTHON_INC = @PYTHON_INCDIR@
 OPENSSL_LIBS = @OPENSSL_LIBS@
+RSYNC_LIBS = @RSYNC_LIBS@
 NCURSES_LIBS = @NCURSES_LIBS@
 CRYPT_LIBS = @CRYPT_LIBS@
 ZLIBS = @ZLIBS@
